--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ body {
   height: 100%
 }
 
+#app {
+  position: relative;
+  font: normal 16px/1.9em "Inter UI", "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%
+}
+
 h1 {
   font-style: normal;
   font-size: 45px;
