--- a/style2.css
+++ b/style2.css
@@ -3,16 +3,36 @@
     width: 400px;
     font-family: 'Roboto', sans-serif;
 }
+@media screen and (max-width: 1060px) {
+  .wrapper {
+    width: 300px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper {
+    width: 350px;
+  }
+}
+  @media screen and (max-width: 400px) {
+    .wrapper {
+      width: 300px;
+    }
+  }
 .subject{
   font-size: 18px;
   font-weight: 700;
   color: #1a1716;
-  margin: 0  ;
+  margin: 0;
   text-align:left;
 }
 .skill {
     margin-bottom: 35px;
     position: relative;
+}
+@media screen and (max-width: 600px) {
+  .skill {
+    margin-bottom: 20px;
+  }
 }
 .skill:before{
     width: 100%;
