--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,4 @@
+/* Style skill bar*/
 
 .wrapper{
     width: 400px;
@@ -26,7 +27,7 @@
   text-align:left;
 }
 .skill {
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     position: relative;
 }
 @media screen and (max-width: 600px) {
@@ -41,7 +42,7 @@
     content: "";
     display: block;
     position: absolute;
-    background: #959595;
+    background: rgb(44, 54, 61);
     bottom: 0;
 }
 .skill-bar {
@@ -70,25 +71,25 @@
 }
 
 .skill1{
-    width: 95%;
+    width: 90%;
 }
 
 .skill2{
-    width: 85%;
+    width: 75%;
 }
 
 .skill2 .skill-count2 {
     right: 0;
 }
 .skill3{
-    width: 75%;
+    width: 70%;
 }
 .skill3 .skill-count3 {
     right: 0;
 }
 
 .skill4{
-    width: 65%
+    width: 80%
 }
 
 .skill4 .skill-count4 {
@@ -104,7 +105,7 @@
 }
 
 .skill6{
-    width: 90%
+    width: 50%
 }
 
 .skill6 .skill-count6 {
